# BTK-2026

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  PROJECT.md  README.md  TASKS.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: base.py  crossplatform_agent.py  decision_agent.py  discount_agent.py  manipulation_agent.py  phishing_agent.py  review_agent.py  seller_agent.py  visual_agent.py
backend/app/api/routes/: auth.py  demo.py  email.py  history.py  petition.py  scan.py
backend/app/models/: product.py  scan.py  user.py
backend/app/orchestrator/: graph.py  mock_runner.py  state.py
backend/app/scrapers/: __init__.py  amazon_tr.py  base.py  hepsiburada.py  n11.py  trendyol.py
backend/app/services/: akakce.py  cache.py  email.py  gemini.py  pdf_generator.py  price_history.py
backend/app/utils/: prompts.py
backend/data/: akakce_cache.json
backend/mock_data/: __init__.py  airpods_fake.json  generate_phishing_sms.py  laptop_suspicious.json  loader.py  phishing_domains.txt  price_histories.json  watch_genuine.json
backend/mock_data/precached_results/: airpods_fake.json  laptop_suspicious.json  phishing_sms.json  watch_genuine.json
backend/scripts/: akakce_inspect.py  prewarm.py  prewarm_akakce.py  prewarm_results.json  prewarm_urls.txt  scrape_inspect.py  scrape_smoke.py
backend/tests/: test_akakce.py  test_base_agent.py  test_cache.py  test_crossplatform_agent.py  test_decision_agent.py  test_discount_agent.py  test_edge_cases.py  test_gemini_service.py  test_manipulation_agent.py  test_petition.py  test_phishing_agent.py  test_review_agent.py  test_scan_endpoint.py  test_scrapers.py  test_seller_agent.py  test_visual_agent.py
browser-extension/: README.md  manifest.json
browser-extension/src/: background.js  content.css  content.js  popup.html  popup.js
docs/: API.md  UI_TEST_PROMPT.md
frontend/: package.json  pnpm-lock.yaml
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
frontend/lib/: api.ts  behavior-profile.ts  ethics-score.ts  i18n-context.tsx  i18n.ts  og.ts  scan-cache.ts  (+4 more)
(+54 files in other folders)
