[project]
name = "trustlens-backend"
version = "0.1.0"
description = "TrustLens AI — Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "imagehash>=4.3.2",
    "langchain>=1.2.18",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.10",
    "numpy>=2.4.4",
    "playwright>=1.59.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "redis>=7.4.0",
    "reportlab>=4.5.0",
    "scikit-learn>=1.8.0",
    "supabase>=2.30.0",
    "uvicorn[standard]>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
